...
struct AchievementsPageView: View {
    @ObservedObject var achievementsViewModel = AchievementsViewModel()
    
    var body: some View {
        NavigationView {
            AchievementsList(achievements: achievementsViewModel.achievements)
                .navigationBarTitle("Achievements", displayMode: .inline)
        }
    }
}

struct AchievementRow: View {
    @ObservedObject var achievementsViewModel = AchievementsViewModel()
...
