...
                            .foregroundColor(.black)
                            .padding(.leading)
                    }
                    .padding(.trailing, 40)
                    Spacer()
                    
                    Text("Workout")
                        .font(.title)
                        .bold()
                        .padding(.trailing, 60)
                    
                    if selectedTab == 0 {
                        VStack{
...
