...
    }
    
    var body: some View {
        NavigationStack {
            SwiftUI.Form {
                /*
                Section(header: Text("Profile")) {
                    Group {
                        HStack {
                            Spacer()
                            VStack {
                                Spacer()
                                Image(systemName: "person.circle")
...
