...
            } else {
                // Default case for any sets that are not the last or only set
                return viewModel.isWorkoutPaused ? "Start Next Set" : "Finish Set"
            }
        } else {
            // Before the workout starts
            return "Start Workout"
        }
    }
    
    private var StartWorkoutView: some View {
        VStack {
            if !viewModel.hasWorkoutStarted {
...
                        viewModel.nextset()
                        
                    }
                } else {
                    // Start the workout
                    print("------startingWorkout-------------")
                    viewModel.currentMotivationalPhrase = "First set, let's go!"
                    viewModel.showingWorkoutSheet = true
                    viewModel.showGraphPopover = false
                    
                }
            }) {
                RoundedRectangle(cornerRadius: 25)
...
                        Text(buttonText)
                            .bold()
                            .foregroundColor(.white)
                            .font(.title2)
                    )
            }
            .accessibilityLabel(viewModel.hasWorkoutStarted ? (viewModel.isWorkoutPaused ? "NextSetButton" : "FinishSetButton") : "StartWorkoutButton")
            .sheet(isPresented: $viewModel.showingWorkoutSheet) {
                if viewModel.countdownActive{
                    // Show countdown view
                    CountdownView(viewModel: viewModel)
                }
                else{
...
                            .onAppear {
                                viewModel.startCountdown()
                            }
                    } else {
                        // Regular input form
                        HStack {
                            Text("Enter Workout Details")
                                .font(.headline)
                            
                            Button(action: {
                                viewModel.startListening()
                            }) {
                                Image(systemName: "mic.circle")
                                    .resizable()
                                    .frame(width: 25, height: 25) // Adjusted size for better fit
                                    .padding(.leading, 5)
                            }
                            .accessibilityLabel("Start Voice Command")
                        }
                        .padding()
                        
                        TextField("Sets", text: $viewModel.inputtedSets)
                            .textFieldStyle(RoundedBorderTextFieldStyle())
                            .keyboardType(.numberPad)
                            .padding()
                        
                        TextField("Reps", text: $viewModel.inputtedReps)
                            .textFieldStyle(RoundedBorderTextFieldStyle())
                            .keyboardType(.numberPad)
                            .padding()
                        
                        TextField("Weight (lbs)", text: $viewModel.inputtedWeights)
                            .textFieldStyle(RoundedBorderTextFieldStyle())
                            .keyboardType(.numberPad)
                            .padding()
                        
                        TextField("Count down Timer (s)", text: $viewModel.inputtedCountdown)
                            .textFieldStyle(RoundedBorderTextFieldStyle())
                            .keyboardType(.numberPad)
                            .padding()
                        
                        
                        Button("Start Workout") {
...
                        }
                        .padding()
                        .foregroundColor(.white)
                        .background(Color.africanViolet)
                        .cornerRadius(10)
                        .alert(isPresented: $viewModel.showingAlert) {
                            Alert(title: Text("Invalid Input"), message: Text(viewModel.alertMessage), dismissButton: .default(Text("OK")))
                        }
                    }
                }
                .frame(width: 400, height: 425)
                .background(Color.white.opacity(0.9))
                .cornerRadius(20)
...
